# fotoserver-koffer

./: .env.example  .gitignore  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
backend/: conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  exceptions.py  logging_config.py  main.py
backend/app/models/: media.py
backend/app/routers/: gallery.py  health.py  upload.py
backend/app/services/: storage.py  thumbnail.py
backend/app/utils/: file_utils.py
backend/tests/: conftest.py  constants.py  test_config.py  test_exception_handler.py  test_gallery.py  test_health.py  test_thumbnail.py  test_upload.py
deploy/desktop/: 50-fotoserver.rules  fotoserver-restart.desktop  fotoserver-start.desktop  fotoserver-status.desktop  fotoserver-stop.desktop
deploy/hotspot/: dnsmasq.conf.template  fotoserver-wlan0.service.template  hostapd.conf.template  nm-unmanage.conf
deploy/nginx/: fotoserver.conf
deploy/scripts/: fotoserver-backup.sh  fotoserver-restart.sh  fotoserver-start.sh  fotoserver-status.sh  fotoserver-stop.sh  install.sh  setup-desktop.sh  setup-hotspot.sh  setup-nginx.sh  setup-systemd.sh  update.sh
deploy/systemd/: fotoserver-api.service  fotoserver-backup.service  fotoserver-backup.timer  fotoserver.target
docs/: architecture.md  deployment.md  development.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.vue
frontend/src/api/: client.ts  (+1 more)
plans/: architektur-fotoserver-koffer.md
(+12 files in other folders)
